Small modyfications to layout fixing bad spacing

--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,7 @@ body {
   background-color: #F8F6F4;
   display: grid;
   grid-template-columns: [side-section_start] 0.9fr [side-section_end content-section_start] 2fr [content-section_end];
-  grid-template-rows: 0.4fr repeat(8, 1fr); }
+  grid-template-rows: 0.4fr repeat(6, 1fr) 0.5fr; }
 
 .media-icon {
   width: 3rem;
@@ -96,12 +96,28 @@ body {
     row-gap: 0.5rem; }
 
 .certifications {
-  grid-row: 8 / 9;
-  grid-column: content-section_start / content-section_end; }
+  grid-row: 7 / 8;
+  grid-column: content-section_start / content-section_end;
+  display: grid;
+  grid-template-rows: 0.2fr 1fr;
+  padding: 1rem; }
+  .certifications__header {
+    justify-content: center;
+    align-items: center;
+    display: grid;
+    gap: .2rem;
+    grid-template-columns: .02fr 2fr; }
+  .certifications__items {
+    padding: 2rem;
+    display: grid;
+    gap: 0.7rem; }
+    .certifications__items__item {
+      text-transform: uppercase;
+      font-weight: 400; }
 
 .education {
   padding: 2rem;
-  grid-row: 1 / 3;
+  grid-row: 2 / 3;
   grid-column: content-section_start / content-section_end;
   display: grid;
   grid-template-rows: 0.2fr 1fr 1rem;
@@ -143,7 +159,7 @@ body {
       color: #494540; }
 
 .experience {
-  grid-row: 3 / 6;
+  grid-row: 3 / 5;
   grid-column: content-section_start / content-section_end;
   display: grid;
   grid-template-rows: 0.2fr 4fr 1rem;
@@ -164,7 +180,8 @@ body {
       display: grid;
       gap: 1rem;
       grid-template-columns: 0.2fr 1fr 0.5fr 3rem;
-      grid-template-rows: 1fr 0.5fr; }
+      grid-template-rows: 1fr 0.5fr;
+      text-transform: uppercase; }
       .experience__content__item .dot {
         grid-column: 1 / 2;
         grid-row: 1 / 2;
@@ -197,7 +214,13 @@ body {
 .footer {
   background-color: #5C8984;
   grid-column: 1 / -1;
-  grid-row: -2 / -1; }
+  grid-row: -2 / -1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 1rem;
+  color: #fff;
+  text-align: center; }
 
 .hero {
   grid-column: 1 / 2;
@@ -214,7 +237,7 @@ body {
     border-radius: 50%; }
 
 .skills {
-  grid-row: 6 / 8;
+  grid-row: 5 / 7;
   grid-column: content-section_start / content-section_end;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
@@ -227,6 +250,7 @@ body {
     display: grid;
     grid-template-columns: .02fr .1fr 1fr;
     padding: 1rem;
+    gap: .2rem;
     align-items: center; }
   .skills__item {
     padding: 1rem;
