--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -44,7 +44,7 @@ body {
 
     grid-template-columns: [side-section_start] 0.9fr [side-section_end content-section_start] 2fr [content-section_end];
 
-    grid-template-rows: 0.4fr repeat(8, 1fr);
+    grid-template-rows: 0.4fr repeat(6, 1fr) 0.5fr;
 }
 
 .media-icon {
