--- a/sass/_education.scss
+++ b/sass/_education.scss
@@ -1,7 +1,7 @@
 .education {
    
     padding: 2rem;
-    grid-row: 1 / 3;
+    grid-row: 2 / 3;
     grid-column: content-section_start / content-section_end;
 
     display: grid;
