--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -2,4 +2,11 @@
     background-color: $color-footer;
     grid-column: 1 / -1;
     grid-row: -2 / -1;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 1rem;
+    color: #fff;
+    text-align: center ;
 }
